Fix: In case of custom networks sorting, we need a bit more space to show the full network name (without truncate).

--- a/src/components/Wallet/TopBar/Networks/Networks.module.scss
+++ b/src/components/Wallet/TopBar/Networks/Networks.module.scss
@@ -2,8 +2,8 @@
 
 .select {
   .optionClassName {
-    font-size: 15px!important;
-    gap: 10px!important;
+    font-size: 14px!important;
+    gap: 6px!important;
   }
   
   .selectInput {
